<resources>

    <!--  for activity_main  -->
    <string name="app_name">MyApp</string>
    <string name="date">Monday, 26th october</string>
    <string name="weather">Sunny</string>

    <!--  cities for menu  -->
    <string name="amman">Amman</string>
    <string name="moscow">Moscow</string>
    <string name="perth">Perth</string>
    <string name="budapest">Budapest</string>
    <string name="damascus">Damascus</string>
    <string name="alexandria">Alexandria</string>
    <string name="rome">Rome</string>
    <string name="istanbul">Istanbul</string>
    <string name="madrid">Madrid</string>
    <string name="beijing">Beijing</string>
    <string name="riyadh">Riyadh</string>
    <string name="vienna">Vienna</string>
    <string name="baghdad">Baghdad</string>
    <string name="aswan">Aswan</string>
    <string name="milan">Milan</string>
    <string name="athens">Athens</string>
    <string name="barcelona">Barcelona</string>
    <string name="shanghai">Shanghai</string>
    <string name="richmond">Richmond</string>

    <!--  activity_settings  -->
    <string name="theme">Dark Theme</string>
    <string name="temperature_unit">Temperature Unit in °F</string>
    <string name="notification">Notification Bar</string>
    <string name="more_info">Show more info</string>

    <string name="search_city">Search city</string>
    <string name="error_msg">There\'s no city like this</string>
    <string name="snackbar_format_string">You selected %s</string>


</resources>
