<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/color_background">

    <Switch
        android:id="@+id/temperature_unit"
        android:layout_width="@dimen/switch_width"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/temperature_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        app:layout_constraintVertical_bias="0.05" />

    <Switch
        android:id="@+id/theme"
        android:layout_width="@dimen/switch_width"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification"
        app:layout_constraintVertical_bias="0.05" />

    <Switch
        android:id="@+id/notification"
        android:layout_width="@dimen/switch_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:text="@string/notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>